[mac] REGRESSION (r122215): Animated GIF outside the viewport doesn't play when scrolled into view. https://bugs.webkit.org/show_bug.cgi?id=94874

Patch by Huang Dongsung <luxtella@company100.net> on 2012-10-05
Reviewed by Simon Fraser.

Rollback previous patch because this patch caused two problems.
1. GIF animation is occasionally paused when tiled scrolling is enabled.
2. This change regressed Apple's Membuster benchmark by ~20% (80MB.)

* loader/cache/CachedImage.cpp:
(WebCore::CachedImage::shouldPauseAnimation):
* loader/cache/CachedImage.h:
(CachedImage):
* loader/cache/CachedResource.h:
* loader/cache/MemoryCache.cpp:
(WebCore::MemoryCache::pruneLiveResourcesToSize):
* rendering/RenderObject.cpp:
(WebCore::RenderObject::willRenderImage):

Canonical link: https://commits.webkit.org/116563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130573 268f45cc-cd09-0410-ab3c-d52691b4dbfc