Source/WebCore/loader/cache/CachedImage.h
@@ -72,8 +72,6 @@ public:
     virtual void allClientsRemoved();
     virtual void destroyDecodedData();
 
-    virtual bool likelyToBeUsedSoon();
-
     virtual void data(PassRefPtr<SharedBuffer> data, bool allDataReceived);
     virtual void error(CachedResource::Status);
     virtual void setResponse(const ResourceResponse&);
